--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
+# SQLite database
+server/db/*.db
+server/db/*.db-shm
+server/db/*.db-wal
