--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "drawer-hello-server",
   "version": "1.0.0",
   "description": "Backend API server for drawer-hello app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
