rename project(s) to lobster chat

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "drawer-hello",
-    "slug": "drawer-hello",
+    "name": "lobster-chat",
+    "slug": "lobster-chat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
