--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "drawer-hello-server",
+  "name": "lobster-chat-server",
   "version": "1.0.0",
-  "description": "Backend API server for drawer-hello app",
+  "description": "Backend API server for lobster-chat app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
