remove error logs from health checks etc

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -24,6 +24,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "046556e5-7923-4738-a850-987e78c9e682"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/046556e5-7923-4738-a850-987e78c9e682"
     }
   }
 }
